plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.0-SNAPSHOT'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.kabutar'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '21'
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
	maven { url 'https://repo.spring.io/snapshot' }
}

dependencies {
	implementation 'org.glassfish.jaxb:jaxb-runtime:4.0.5'
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
	implementation 'io.vavr:vavr:0.10.4'
	implementation 'org.yaml:snakeyaml:2.2'
	implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
	implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
	
	compileOnly 'org.projectlombok:lombok:1.18.32'

}

tasks.named('test') {
	useJUnitPlatform()
}
